; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_9701.c_checksum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_9701.c_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @checksum(i8* %0, i8 signext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8 %1, i8* %4, align 1
  store i32 65535, i32* %5, align 4
  store i32 65535, i32* %6, align 4
  br label %8

8:                                                ; preds = %40, %2
  %9 = load i8, i8* %4, align 1
  %10 = icmp ne i8 %9, 0
  br i1 %10, label %11, label %51

11:                                               ; preds = %8
  %12 = load i8, i8* %4, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp sgt i32 %13, 360
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  br label %19

16:                                               ; preds = %11
  %17 = load i8, i8* %4, align 1
  %18 = sext i8 %17 to i32
  br label %19

19:                                               ; preds = %16, %15
  %20 = phi i32 [ 360, %15 ], [ %18, %16 ]
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i8, i8* %4, align 1
  %23 = sext i8 %22 to i32
  %24 = sub i32 %23, %21
  %25 = trunc i32 %24 to i8
  store i8 %25, i8* %4, align 1
  br label %26

26:                                               ; preds = %36, %19
  %27 = load i8*, i8** %3, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %3, align 8
  %29 = load i8, i8* %27, align 1
  %30 = sext i8 %29 to i32
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, %33
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %26
  %37 = load i32, i32* %7, align 4
  %38 = add i32 %37, -1
  store i32 %38, i32* %7, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %26, label %40

40:                                               ; preds = %36
  %41 = load i32, i32* %5, align 4
  %42 = and i32 %41, 65535
  %43 = load i32, i32* %5, align 4
  %44 = ashr i32 %43, 16
  %45 = add nsw i32 %42, %44
  store i32 %45, i32* %5, align 4
  %46 = load i32, i32* %6, align 4
  %47 = and i32 %46, 65535
  %48 = load i32, i32* %6, align 4
  %49 = ashr i32 %48, 16
  %50 = add nsw i32 %47, %49
  store i32 %50, i32* %6, align 4
  br label %8

51:                                               ; preds = %8
  %52 = load i32, i32* %5, align 4
  %53 = and i32 %52, 65535
  %54 = load i32, i32* %5, align 4
  %55 = ashr i32 %54, 16
  %56 = add nsw i32 %53, %55
  store i32 %56, i32* %5, align 4
  %57 = load i32, i32* %6, align 4
  %58 = and i32 %57, 65535
  %59 = load i32, i32* %6, align 4
  %60 = ashr i32 %59, 16
  %61 = add nsw i32 %58, %60
  store i32 %61, i32* %6, align 4
  %62 = load i32, i32* %6, align 4
  %63 = shl i32 %62, 16
  %64 = load i32, i32* %5, align 4
  %65 = or i32 %63, %64
  %66 = trunc i32 %65 to i8
  ret i8 %66
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
